examples/test/testpolicy3600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3600
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key26: value38
      key30: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value44
          key6: value19
          key15: value38
      podSelector:
        matchLabels:
          key11: value31
          key17: value4
